<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TampilanAkhir">

    <TextView
        android:id="@+id/tgs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task1"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <TextView
        android:id="@+id/hsl_jenis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task1"
        android:textSize="10pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.199" />

    <TextView
        android:id="@+id/hsl_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:text="aku"
        app:layout_constraintEnd_toEndOf="@+id/hsl_jenis"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/hsl_jenis"
        app:layout_constraintTop_toBottomOf="@+id/hsl_jenis" />

    <TextView
        android:id="@+id/jenis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jnstask"
        android:textSize="10pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.381" />

    <TextView
        android:id="@+id/hsl_jenis2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:text="budi"
        app:layout_constraintEnd_toEndOf="@+id/hsl_jenis"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/hsl_jenis"
        app:layout_constraintTop_toBottomOf="@+id/jenis" />

    <TextView
        android:id="@+id/hsl_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timetask"
        android:textSize="10pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" />

    <TextView
        android:id="@+id/hsl_jtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:text="budi"
        app:layout_constraintEnd_toEndOf="@+id/hsl_jenis"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/hsl_jenis"
        app:layout_constraintTop_toBottomOf="@+id/hsl_time" />
</androidx.constraintlayout.widget.ConstraintLayout>